// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackedTimeExtractor can parse a simple example 1`] = `
Object {
  "text": "worked on",
  "trackedTimes": Array [
    Object {
      "date": "2018-09-13 17:27:00",
      "trackedTime": "01:00:00",
      "tracker": "Jörn",
    },
  ],
}
`;

exports[`TrackedTimeExtractor can parse more than one entry 1`] = `
Object {
  "text": "worked on #great",
  "trackedTimes": Array [
    Object {
      "date": "2018-09-15 18:20:15",
      "trackedTime": "00:10:00",
      "tracker": "Udo",
    },
    Object {
      "date": "2018-09-13 17:27:00",
      "trackedTime": "01:00:00",
      "tracker": "Jörn",
    },
  ],
}
`;

exports[`TrackedTimeExtractor discards broken entries 1`] = `
Object {
  "text": "worked on #great",
  "trackedTimes": undefined,
}
`;

exports[`TrackedTimeExtractor doesn't change anything when no tracked time is in the string 1`] = `
Object {
  "text": "no time #really",
  "trackedTimes": undefined,
}
`;
